--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -55,7 +55,33 @@ jobs:
         with:
           context: . 
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/everybuddy:latest
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/everybuddy:latest
+            ${{ secrets.DOCKER_USERNAME }}/everybuddy:${{ github.sha }}
+          
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+  deploy: 
+    needs: build_and_push
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    
+    steps:
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            cd /home/ubuntu
+            export DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
+            ./deploy.sh
+
+      - name: Health Check
+        run: |
+          sleep 20
+          curl -f http://${{ secrets.EC2_HOST }}:8080/actuator/health
+  
           
