--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -68,6 +68,7 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+      # EC2 서버에 SSH 접속하여 배포 스크립트 실행
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         with:
@@ -78,7 +79,8 @@ jobs:
             cd /home/ubuntu
             export DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }}
             ./deploy.sh
-
+      
+      # 배포 완료 후 애플리케이션 정상 동작 확인      
       - name: Health Check
         run: |
           sleep 20
