fix cicd 트리거 수정

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -4,10 +4,10 @@ name: EveryBuddy server CI & CD
 on:
   push:
     branches:
-      - main
+      - dev
   pull_request:
     branches:
-      - main
+      - dev
     
 
 
