--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -22,10 +22,10 @@ jobs:
       - name: Set up gradlew executable permission
         run: chmod +x gradlew
         
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'temurin'
  
       - name: Build with Gradle
@@ -65,19 +65,39 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@master
+      - name: Checkout Code
+        uses: actions/checkout@v4
+      
+      # docker-compose.yml을 EC2에 전송
+      - name: Copy docker-compose.yml to EC2
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
+          source: "docker-compose.yml"
+          target: "~/everybuddy"
+          
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
+          MYSQL_USER: ${{ secrets.MYSQL_USER }}
+          MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          envs: DOCKER_USERNAME,MYSQL_ROOT_PASSWORD,MYSQL_USER,MYSQL_PASSWORD
           script: |
-            docker pull ${{ secrets.DOCKER_USERNAME }}/everybuddy:latest
-            docker stop everybuddy-backend 2>/dev/null || true
-            docker rm everybuddy-backend 2>/dev/null || true
-            docker run -d \
-              --name everybuddy-backend \
-              -p 8080:8080 \
-              --restart unless-stopped \
-              ${{ secrets.DOCKER_USERNAME }}/everybuddy:latest
-            docker image prune -f       
+            cd ~/everybuddy
+            export DOCKER_USERNAME=$DOCKER_USERNAME
+            export MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
+            export MYSQL_USER=$MYSQL_USER
+            export MYSQL_PASSWORD=$MYSQL_PASSWORD
+            
+            docker pull $DOCKER_USERNAME/everybuddy:latest
+            docker-compose down
+            docker-compose up -d
+            docker image prune -f   
