--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -1,6 +1,5 @@
 name: EveryBuddy server CI & CD
 
-
 on:
   push:
     branches:
@@ -8,66 +7,64 @@ on:
   pull_request:
     branches:
       - dev
-    
-
 
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-      
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
       - name: Set up gradlew executable permission
         run: chmod +x gradlew
-        
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
-          distribution: 'temurin'
- 
+          java-version: "21"
+          distribution: "temurin"
+
       - name: Build with Gradle
         run: ./gradlew build
-        
+
       # PR 이벤트인 경우 (빌드까지만 수행하고 Docker Push는 건너뜀)
       - name: Skip Docker Push on PR
         if: github.event_name == 'pull_request'
         run: echo "코드 정적 분석을 위해 Docker Hub 푸시를 건너뜁니다."
-      
-      # docker cashe 기능을 사용하기 위해 빌더를 명시적으로 생성  
+
+      # docker cashe 기능을 사용하기 위해 빌더를 명시적으로 생성
       - name: Set up Docker Buildx
-        if: github.event_name == 'push' 
+        if: github.event_name == 'push'
         uses: docker/setup-buildx-action@v3
 
       # main 브랜치에 Push 된 경우에만 Docker Hub에 Login
       - name: Docker Login
-        if: github.event_name == 'push' 
+        if: github.event_name == 'push'
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }} 
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Tag Docker Image
-        if: github.event_name == 'push' 
+        if: github.event_name == 'push'
         uses: docker/build-push-action@v5
         with:
-          context: . 
+          context: .
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/everybuddy:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          
-  deploy: 
+
+  deploy:
     needs: build_and_push
-    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'  
+    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-      
+
       # docker-compose.yml을 EC2에 전송
       - name: Copy docker-compose.yml to EC2
         uses: appleboy/scp-action@master
@@ -77,7 +74,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "docker-compose.yml"
           target: "~/everybuddy"
-          
+
       - name: Deploy to EC2
         uses: appleboy/ssh-action@master
         env:
@@ -85,19 +82,25 @@ jobs:
           MYSQL_ROOT_PASSWORD: ${{ secrets.MYSQL_ROOT_PASSWORD }}
           MYSQL_USER: ${{ secrets.MYSQL_USER }}
           MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+          AWS_S3_ACCESS_KEY: ${{ secrets.AWS_S3_ACCESS_KEY }}
+          AWS_S3_SECRET_KEY: ${{ secrets.AWS_S3_SECRET_KEY }}
+          AWS_S3_BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET_NAME }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          envs: DOCKER_USERNAME,MYSQL_ROOT_PASSWORD,MYSQL_USER,MYSQL_PASSWORD
+          envs: DOCKER_USERNAME,MYSQL_ROOT_PASSWORD,MYSQL_USER,MYSQL_PASSWORD,AWS_S3_ACCESS_KEY,AWS_S3_SECRET_KEY,AWS_S3_BUCKET_NAME
           script: |
             cd ~/everybuddy
             export DOCKER_USERNAME=$DOCKER_USERNAME
             export MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD
             export MYSQL_USER=$MYSQL_USER
             export MYSQL_PASSWORD=$MYSQL_PASSWORD
-            
+            export AWS_S3_ACCESS_KEY=$AWS_S3_ACCESS_KEY             
+            export AWS_S3_SECRET_KEY=$AWS_S3_SECRET_KEY              
+            export AWS_S3_BUCKET_NAME=$AWS_S3_BUCKET_NAME            
+
             docker pull $DOCKER_USERNAME/everybuddy:latest
             docker-compose down
             docker-compose up -d
-            docker image prune -f   
+            docker image prune -f
