--- a/build.gradle
+++ b/build.gradle
@@ -38,12 +38,18 @@ dependencies {
 	// Firebase Admin SDK
 	implementation 'com.google.firebase:firebase-admin:9.4.2'
 
+	// AWS S3
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.0'
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	// AWS S3
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.0'
 }
 
 tasks.named('test') {
