--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,13 @@ services:
       AWS_S3_ACCESS_KEY: ${AWS_S3_ACCESS_KEY}
       AWS_S3_SECRET_KEY: ${AWS_S3_SECRET_KEY}
       AWS_S3_BUCKET_NAME: ${AWS_S3_BUCKET_NAME}
+      JWT_SECRET: ${JWT_SECRET}
+      JWT_VALIDITY: ${JWT_VALIDITY}
+      FIREBASE_PROJECT_ID: ${FIREBASE_PROJECT_ID}
+      FIREBASE_DATABASE_URL: ${FIREBASE_DATABASE_URL}
+      FIREBASE_FILE_PATH: ${FIREBASE_FILE_PATH}
+    volumes:
+      - ./firebase-adminsdk.json:${FIREBASE_FILE_PATH}:ro
     depends_on:
       mysql:
         condition: service_healthy
