Fix: firebase 인증키 관련 트러블 슈팅

--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -79,7 +79,7 @@ jobs:
         env:
           FIREBASE_ADMIN_KEY: ${{ secrets.FIREBASE_ADMIN_KEY }}
         run: |
-          cat << 'EOF' > firebase-adminsdk.json
+          cat << EOF > firebase-adminsdk.json
           $FIREBASE_ADMIN_KEY
           EOF
 
