refactor: 개발 서버 주소 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -45,3 +45,6 @@ firebase:
     url: ${FIREBASE_DATABASE_URL}
   credentials:
     path: ${FIREBASE_FILE_PATH}
+
+swagger:
+  server-url: ${SERVER_URL}
