--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
 
 	// AWS S3
     implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3:3.1.0'
+
+	// Monitoring
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'io.micrometer:micrometer-registry-prometheus'  
 }
 
 tasks.named('test') {
