--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -107,11 +107,12 @@ jobs:
           FIREBASE_PROJECT_ID: ${{ secrets.FIREBASE_PROJECT_ID }}
           FIREBASE_DATABASE_URL: ${{ secrets.FIREBASE_DATABASE_URL }}
           FIREBASE_FILE_PATH: ${{ secrets.FIREBASE_FILE_PATH }}
+          SERVER_URL: ${{ secrets.SERVER_URL }}
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          envs: DOCKER_USERNAME,MYSQL_ROOT_PASSWORD,MYSQL_USER,MYSQL_PASSWORD,AWS_S3_ACCESS_KEY,AWS_S3_SECRET_KEY,AWS_S3_BUCKET_NAME,JWT_SECRET,JWT_VALIDITY,FIREBASE_PROJECT_ID,FIREBASE_DATABASE_URL,FIREBASE_FILE_PATH
+          envs: DOCKER_USERNAME,MYSQL_ROOT_PASSWORD,MYSQL_USER,MYSQL_PASSWORD,AWS_S3_ACCESS_KEY,AWS_S3_SECRET_KEY,AWS_S3_BUCKET_NAME,JWT_SECRET,JWT_VALIDITY,FIREBASE_PROJECT_ID,FIREBASE_DATABASE_URL,FIREBASE_FILE_PATH,SERVER_URL
           script: |
             cd ~/everybuddy
             export DOCKER_USERNAME=$DOCKER_USERNAME
@@ -126,6 +127,7 @@ jobs:
             export FIREBASE_PROJECT_ID=$FIREBASE_PROJECT_ID
             export FIREBASE_DATABASE_URL=$FIREBASE_DATABASE_URL
             export FIREBASE_FILE_PATH=$FIREBASE_FILE_PATH
+            export SERVER_URL=$SERVER_URL
 
             docker pull $DOCKER_USERNAME/everybuddy:latest
             docker compose down
